--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -749,3 +749,253 @@
         --8<-- "docs/T6_6_Epreuve_pratique/files/30_2/enonce.md"
         ```             
         
+### Exercice 31.1 □
+!!! example "Exercice 31.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/31_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/31_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/31_1/enonce.md"
+
+
+### Exercice 31.2 □
+!!! example "Exercice 31.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/31_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/31_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/31_2/enonce.md"
+        ```             
+        
+### Exercice 32.1 □
+!!! example "Exercice 32.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/32_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/32_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/32_1/enonce.md"
+
+
+### Exercice 32.2 □
+!!! example "Exercice 32.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/32_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/32_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/32_2/enonce.md"
+        ```             
+        
+### Exercice 33.1 □
+!!! example "Exercice 33.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/33_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/33_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/33_1/enonce.md"
+
+
+### Exercice 33.2 □
+!!! example "Exercice 33.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/33_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/33_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/33_2/enonce.md"
+        ```             
+        
+### Exercice 34.1 □
+!!! example "Exercice 34.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/34_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/34_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/34_1/enonce.md"
+
+
+### Exercice 34.2 □
+!!! example "Exercice 34.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/34_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/34_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/34_2/enonce.md"
+        ```             
+        
+### Exercice 35.1 □
+!!! example "Exercice 35.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/35_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/35_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/35_1/enonce.md"
+
+
+### Exercice 35.2 □
+!!! example "Exercice 35.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/35_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/35_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/35_2/enonce.md"
+        ```             
+        
+### Exercice 36.1 □
+!!! example "Exercice 36.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/36_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/36_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/36_1/enonce.md"
+
+
+### Exercice 36.2 □
+!!! example "Exercice 36.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/36_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/36_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/36_2/enonce.md"
+        ```             
+        
+### Exercice 37.1 □
+!!! example "Exercice 37.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/37_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/37_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/37_1/enonce.md"
+
+
+### Exercice 37.2 □
+!!! example "Exercice 37.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/37_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/37_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/37_2/enonce.md"
+        ```             
+        
+### Exercice 38.1 □
+!!! example "Exercice 38.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/38_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/38_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/38_1/enonce.md"
+
+
+### Exercice 38.2 □
+!!! example "Exercice 38.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/38_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/38_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/38_2/enonce.md"
+        ```             
+        
+### Exercice 39.1 □
+!!! example "Exercice 39.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/39_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/39_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/39_1/enonce.md"
+
+
+### Exercice 39.2 □
+!!! example "Exercice 39.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/39_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/39_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/39_2/enonce.md"
+        ```             
+        
+### Exercice 40.1 □
+!!! example "Exercice 40.1"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/40_1/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/40_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "docs/T6_6_Epreuve_pratique/files/40_1/enonce.md"
+
+
+### Exercice 40.2 □
+!!! example "Exercice 40.2"
+    === "Énoncé" 
+        --8<-- "docs/T6_6_Epreuve_pratique/files/40_2/enonce.md"
+
+    === "Correction"
+        --8<-- "docs/T6_6_Epreuve_pratique/files/40_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "docs/T6_6_Epreuve_pratique/files/40_2/enonce.md"
+        ```             
+        
