--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -1,4 +1,11 @@
 
+:warning: Attention :
+
+- certains sujets (ceux de l'année dernière reconduits cette année) ont parfois été légèrement modifiés.
+- certains nouveaux sujets comportent parfois des erreurs.
+
+La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS_2022_total.pdf).
+
 ### Exercice 01.1 □
 !!! example "Exercice 01.1"
     === "Énoncé" 
