--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -6,6 +6,13 @@
 
 La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS_2022_total.pdf).
 
+
+!!! info ":star: Pourquoi proposer une correction ? :star:" 
+    - La BNS est une banque de sujets **publique**, publiée bien en amont de l'Épreuve Pratique, afin que les futurs candidats puissent s'entraîner à la résolution des exercices.
+    - Pour que **mes** élèves puissent travailler en autonomie, une proposition de corrigé figure (souvent) en regard de l'énoncé.
+    - Pour que d'autres puissent aussi travailler ces sujets et ces corrigés, éventuellement me signaler des erreurs, les corriger, et les partager à leur tour, ces corrections sont accessibles **à tous**. 
+
+
 ### Exercice 01.1 □
 !!! example "Exercice 01.1"
     === "Énoncé" 
