--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -1,10 +1,11 @@
+# Épreuve Pratique BNS 2022
 
-:warning: Attention :
+:warning: **À lire**
 
-- certains sujets (ceux de l'année dernière reconduits cette année) ont parfois été légèrement modifiés.
-- certains nouveaux sujets comportent parfois des erreurs.
-
-La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS_2022_total.pdf).
+- Certains sujets (ceux de l'année dernière reconduits cette année) ont parfois été légèrement modifiés. La correspondance des numérotations entre la BNS 2021 et la BNS 2022 peut se retrouver [ici](data/corresp.png){. target = "_blank"}
+- Certains de ces sujets comportent des erreurs, que j'ai corrigées ou non. Dans le doute, comparer avec la version originale du sujet.
+- Les versions originales de ces sujets sont disponibles en pdf au début de chaque sujet. (pour télécharger les 40 sujets en un seul fichier, c'est [ici](data/BNS_2022_total.pdf){. target = "_blank"})
+- Si vous trouvez une erreur dans une énoncé ou une correction, merci m'envoyer un message à gilles.lassus[at]ac-bordeaux.fr
 
 
 !!! info ":star: Pourquoi proposer une correction ? :star:" 
@@ -12,6 +13,13 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
     - Pour que **mes** élèves puissent travailler en autonomie, une proposition de corrigé figure (souvent) en regard de l'énoncé.
     - Pour que d'autres puissent aussi travailler ces sujets et ces corrigés, éventuellement me signaler des erreurs, les corriger, et les partager à leur tour, ces corrections sont accessibles **à tous**. 
 
+
+
+
+
+## ▶ Sujet 01
+
+[Version originale du sujet](pdf2022/22-NSI-01.pdf){. target = "_blank"} en pdf.
 
 ### Exercice 01.1 □
 !!! example "Exercice 01.1"
@@ -38,6 +46,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/01_2/enonce.md"
         ```             
         
+## ▶ Sujet 02
+
+[Version originale du sujet](pdf2022/22-NSI-02.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 02.1 □
 !!! example "Exercice 02.1"
     === "Énoncé" 
@@ -63,6 +75,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/02_2/enonce.md"
         ```             
         
+## ▶ Sujet 03
+
+[Version originale du sujet](pdf2022/22-NSI-03.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 03.1 □
 !!! example "Exercice 03.1"
     === "Énoncé" 
@@ -88,6 +104,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/03_2/enonce.md"
         ```             
         
+## ▶ Sujet 04
+
+[Version originale du sujet](pdf2022/22-NSI-04.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 04.1 □
 !!! example "Exercice 04.1"
     === "Énoncé" 
@@ -113,6 +133,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/04_2/enonce.md"
         ```             
         
+## ▶ Sujet 05
+
+[Version originale du sujet](pdf2022/22-NSI-05.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 05.1 □
 !!! example "Exercice 05.1"
     === "Énoncé" 
@@ -138,6 +162,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/05_2/enonce.md"
         ```             
         
+## ▶ Sujet 06
+
+[Version originale du sujet](pdf2022/22-NSI-06.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 06.1 □
 !!! example "Exercice 06.1"
     === "Énoncé" 
@@ -163,6 +191,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/06_2/enonce.md"
         ```             
         
+## ▶ Sujet 07
+
+[Version originale du sujet](pdf2022/22-NSI-07.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 07.1 □
 !!! example "Exercice 07.1"
     === "Énoncé" 
@@ -188,6 +220,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/07_2/enonce.md"
         ```             
         
+## ▶ Sujet 08
+
+[Version originale du sujet](pdf2022/22-NSI-08.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 08.1 □
 !!! example "Exercice 08.1"
     === "Énoncé" 
@@ -213,6 +249,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/08_2/enonce.md"
         ```             
         
+## ▶ Sujet 09
+
+[Version originale du sujet](pdf2022/22-NSI-09.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 09.1 □
 !!! example "Exercice 09.1"
     === "Énoncé" 
@@ -238,6 +278,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/09_2/enonce.md"
         ```             
         
+## ▶ Sujet 10
+
+[Version originale du sujet](pdf2022/22-NSI-10.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 10.1 □
 !!! example "Exercice 10.1"
     === "Énoncé" 
@@ -263,6 +307,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/10_2/enonce.md"
         ```             
         
+## ▶ Sujet 11
+
+[Version originale du sujet](pdf2022/22-NSI-11.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 11.1 □
 !!! example "Exercice 11.1"
     === "Énoncé" 
@@ -288,6 +336,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/11_2/enonce.md"
         ```             
         
+## ▶ Sujet 12
+
+[Version originale du sujet](pdf2022/22-NSI-12.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 12.1 □
 !!! example "Exercice 12.1"
     === "Énoncé" 
@@ -313,6 +365,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/12_2/enonce.md"
         ```             
         
+## ▶ Sujet 13
+
+[Version originale du sujet](pdf2022/22-NSI-13.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 13.1 □
 !!! example "Exercice 13.1"
     === "Énoncé" 
@@ -338,6 +394,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/13_2/enonce.md"
         ```             
         
+## ▶ Sujet 14
+
+[Version originale du sujet](pdf2022/22-NSI-14.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 14.1 □
 !!! example "Exercice 14.1"
     === "Énoncé" 
@@ -363,6 +423,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/14_2/enonce.md"
         ```             
         
+## ▶ Sujet 15
+
+[Version originale du sujet](pdf2022/22-NSI-15.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 15.1 □
 !!! example "Exercice 15.1"
     === "Énoncé" 
@@ -388,6 +452,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/15_2/enonce.md"
         ```             
         
+## ▶ Sujet 16
+
+[Version originale du sujet](pdf2022/22-NSI-16.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 16.1 □
 !!! example "Exercice 16.1"
     === "Énoncé" 
@@ -413,6 +481,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/16_2/enonce.md"
         ```             
         
+## ▶ Sujet 17
+
+[Version originale du sujet](pdf2022/22-NSI-17.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 17.1 □
 !!! example "Exercice 17.1"
     === "Énoncé" 
@@ -438,6 +510,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/17_2/enonce.md"
         ```             
         
+## ▶ Sujet 18
+
+[Version originale du sujet](pdf2022/22-NSI-18.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 18.1 □
 !!! example "Exercice 18.1"
     === "Énoncé" 
@@ -463,6 +539,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/18_2/enonce.md"
         ```             
         
+## ▶ Sujet 19
+
+[Version originale du sujet](pdf2022/22-NSI-19.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 19.1 □
 !!! example "Exercice 19.1"
     === "Énoncé" 
@@ -488,6 +568,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/19_2/enonce.md"
         ```             
         
+## ▶ Sujet 20
+
+[Version originale du sujet](pdf2022/22-NSI-20.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 20.1 □
 !!! example "Exercice 20.1"
     === "Énoncé" 
@@ -513,6 +597,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/20_2/enonce.md"
         ```             
         
+## ▶ Sujet 21
+
+[Version originale du sujet](pdf2022/22-NSI-21.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 21.1 □
 !!! example "Exercice 21.1"
     === "Énoncé" 
@@ -538,6 +626,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/21_2/enonce.md"
         ```             
         
+## ▶ Sujet 22
+
+[Version originale du sujet](pdf2022/22-NSI-22.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 22.1 □
 !!! example "Exercice 22.1"
     === "Énoncé" 
@@ -563,6 +655,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/22_2/enonce.md"
         ```             
         
+## ▶ Sujet 23
+
+[Version originale du sujet](pdf2022/22-NSI-23.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 23.1 □
 !!! example "Exercice 23.1"
     === "Énoncé" 
@@ -588,6 +684,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/23_2/enonce.md"
         ```             
         
+## ▶ Sujet 24
+
+[Version originale du sujet](pdf2022/22-NSI-24.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 24.1 □
 !!! example "Exercice 24.1"
     === "Énoncé" 
@@ -613,6 +713,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/24_2/enonce.md"
         ```             
         
+## ▶ Sujet 25
+
+[Version originale du sujet](pdf2022/22-NSI-25.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 25.1 □
 !!! example "Exercice 25.1"
     === "Énoncé" 
@@ -638,6 +742,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/25_2/enonce.md"
         ```             
         
+## ▶ Sujet 26
+
+[Version originale du sujet](pdf2022/22-NSI-26.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 26.1 □
 !!! example "Exercice 26.1"
     === "Énoncé" 
@@ -663,6 +771,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/26_2/enonce.md"
         ```             
         
+## ▶ Sujet 27
+
+[Version originale du sujet](pdf2022/22-NSI-27.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 27.1 □
 !!! example "Exercice 27.1"
     === "Énoncé" 
@@ -688,6 +800,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/27_2/enonce.md"
         ```             
         
+## ▶ Sujet 28
+
+[Version originale du sujet](pdf2022/22-NSI-28.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 28.1 □
 !!! example "Exercice 28.1"
     === "Énoncé" 
@@ -713,6 +829,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/28_2/enonce.md"
         ```             
         
+## ▶ Sujet 29
+
+[Version originale du sujet](pdf2022/22-NSI-29.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 29.1 □
 !!! example "Exercice 29.1"
     === "Énoncé" 
@@ -738,6 +858,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/29_2/enonce.md"
         ```             
         
+## ▶ Sujet 30
+
+[Version originale du sujet](pdf2022/22-NSI-30.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 30.1 □
 !!! example "Exercice 30.1"
     === "Énoncé" 
@@ -763,6 +887,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/30_2/enonce.md"
         ```             
         
+## ▶ Sujet 31
+
+[Version originale du sujet](pdf2022/22-NSI-31.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 31.1 □
 !!! example "Exercice 31.1"
     === "Énoncé" 
@@ -788,6 +916,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/31_2/enonce.md"
         ```             
         
+## ▶ Sujet 32
+
+[Version originale du sujet](pdf2022/22-NSI-32.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 32.1 □
 !!! example "Exercice 32.1"
     === "Énoncé" 
@@ -813,6 +945,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/32_2/enonce.md"
         ```             
         
+## ▶ Sujet 33
+
+[Version originale du sujet](pdf2022/22-NSI-33.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 33.1 □
 !!! example "Exercice 33.1"
     === "Énoncé" 
@@ -838,6 +974,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/33_2/enonce.md"
         ```             
         
+## ▶ Sujet 34
+
+[Version originale du sujet](pdf2022/22-NSI-34.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 34.1 □
 !!! example "Exercice 34.1"
     === "Énoncé" 
@@ -863,6 +1003,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/34_2/enonce.md"
         ```             
         
+## ▶ Sujet 35
+
+[Version originale du sujet](pdf2022/22-NSI-35.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 35.1 □
 !!! example "Exercice 35.1"
     === "Énoncé" 
@@ -888,6 +1032,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/35_2/enonce.md"
         ```             
         
+## ▶ Sujet 36
+
+[Version originale du sujet](pdf2022/22-NSI-36.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 36.1 □
 !!! example "Exercice 36.1"
     === "Énoncé" 
@@ -913,6 +1061,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/36_2/enonce.md"
         ```             
         
+## ▶ Sujet 37
+
+[Version originale du sujet](pdf2022/22-NSI-37.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 37.1 □
 !!! example "Exercice 37.1"
     === "Énoncé" 
@@ -938,6 +1090,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/37_2/enonce.md"
         ```             
         
+## ▶ Sujet 38
+
+[Version originale du sujet](pdf2022/22-NSI-38.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 38.1 □
 !!! example "Exercice 38.1"
     === "Énoncé" 
@@ -963,6 +1119,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/38_2/enonce.md"
         ```             
         
+## ▶ Sujet 39
+
+[Version originale du sujet](pdf2022/22-NSI-39.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 39.1 □
 !!! example "Exercice 39.1"
     === "Énoncé" 
@@ -988,6 +1148,10 @@ La version **originale** de ces sujets 2022 peut être consultée [ici](data/BNS
         --8<-- "includes/files/39_2/enonce.md"
         ```             
         
+## ▶ Sujet 40
+
+[Version originale du sujet](pdf2022/22-NSI-40.pdf){. target = "_blank"} en pdf.
+
 ### Exercice 40.1 □
 !!! example "Exercice 40.1"
     === "Énoncé" 
