--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -1176,4 +1176,6 @@
         ```md
         --8<-- "includes/files/40_2/enonce.md"
         ```             
-        
+
+
+[archive](/pdf2022/BNS2022_officiel.zip)
