--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -1178,4 +1178,5 @@
         ```             
 
 
-[archive](pdf2022/BNS2022_officiel.zip)
+*Remerciements pour le signalement et la correction des nombreuses erreurs : Alexandre Hainaut, Noé Pierre.*
+
