--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -1179,5 +1179,5 @@
         ```             
 
 
-*Remerciements pour le signalement et la correction des nombreuses erreurs : Alexandre Hainaut, Noé Pierre, Cyrille Jochault.*
+*Remerciements pour le signalement et la correction des nombreuses erreurs : Alexandre Hainaut, Noé Pierre, Cyrille Jochault, Sébastien Rivillon.*
 
