--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -11,7 +11,7 @@
 
 !!! info ":star: Pourquoi proposer une correction ? :star:" 
     - La BNS est une banque de sujets **publique**, publiée bien en amont de l'Épreuve Pratique, afin que les futurs candidats puissent s'entraîner à la résolution des exercices.
-    - Pour que **mes** élèves puissent travailler en autonomie, une proposition de corrigé figure (souvent) en regard de l'énoncé.
+    - Pour que **mes** élèves puissent travailler en autonomie, une proposition de corrigé figure en regard de l'énoncé.
     - Pour que d'autres puissent aussi travailler ces sujets et ces corrigés, éventuellement me signaler des erreurs, les corriger, et les partager à leur tour, ces corrections sont accessibles **à tous**. 
 
 
