--- a/docs/T6_6_Epreuve_pratique/BNS_2022.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2022.md
@@ -6,7 +6,7 @@
 - Certains sujets (ceux de l'année dernière reconduits cette année) ont parfois été légèrement modifiés par rapport à la version 2021. La correspondance des numérotations entre la BNS 2021 et la BNS 2022 peut se retrouver [ici](data/corresp.png){. target = "_blank"}
 - Certains de ces sujets comportent des erreurs, que j'ai corrigées ou non. Dans le doute, comparer avec la version originale du sujet.
 - Les versions originales de ces sujets sont disponibles en pdf au début de chaque sujet. (pour télécharger les 40 sujets en un seul fichier, c'est [ici](data/BNS_2022_total_V2.pdf){. target = "_blank"})
-- Si vous trouvez une erreur dans une énoncé ou une correction, merci m'envoyer un message à gilles.lassus[at]ac-bordeaux.fr.
+- Si vous trouvez une erreur dans un énoncé ou une correction, merci m'envoyer un message à gilles.lassus[at]ac-bordeaux.fr.
 
 
 !!! info ":star: Pourquoi proposer une correction ? :star:" 
