--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -2,7 +2,7 @@
 
 :new: :new: :new: :new: 
 
------
+-------
 <!-- 
 
 :warning: **À lire**
@@ -20,17 +20,17 @@
     - Pour que d'autres puissent aussi travailler ces sujets et ces corrigés, éventuellement me signaler des erreurs, les corriger, et les partager à leur tour, ces corrections sont accessibles **à tous**.  -->
 
 
-WORK IN PROGRESS
+:warning: :warning: :warning: WORK IN PROGRESS :warning: :warning: :warning: 
 
-SUJETS EN COURS DE MISE EN LIGNE
+**SUJETS EN COURS DE MISE EN LIGNE**
 
-WORK IN PROGRESS
+
 
 ## ▶ Sujet 01
 
 [Version originale du sujet](pdf2023/23-NSI-01.pdf){. target = "_blank"} en pdf.
 
-### Exercice 01.1 □
+### Exercice 01.1 
 !!! example "Exercice 01.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/01_1/enonce.md"
@@ -42,7 +42,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/01_1/enonce.md"
 
 
-### Exercice 01.2 □
+### Exercice 01.2 
 !!! example "Exercice 01.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/01_2/enonce.md"
@@ -59,7 +59,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-02.pdf){. target = "_blank"} en pdf.
 
-### Exercice 02.1 □
+### Exercice 02.1 
 !!! example "Exercice 02.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/02_1/enonce.md"
@@ -71,7 +71,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/02_1/enonce.md"
 
 
-### Exercice 02.2 □
+### Exercice 02.2 
 !!! example "Exercice 02.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/02_2/enonce.md"
@@ -88,7 +88,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-03.pdf){. target = "_blank"} en pdf.
 
-### Exercice 03.1 □
+### Exercice 03.1 
 !!! example "Exercice 03.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/03_1/enonce.md"
@@ -100,7 +100,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/03_1/enonce.md"
 
 
-### Exercice 03.2 □
+### Exercice 03.2 
 !!! example "Exercice 03.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/03_2/enonce.md"
@@ -117,7 +117,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-04.pdf){. target = "_blank"} en pdf.
 
-### Exercice 04.1 □
+### Exercice 04.1 
 !!! example "Exercice 04.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/04_1/enonce.md"
@@ -129,7 +129,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/04_1/enonce.md"
 
 
-### Exercice 04.2 □
+### Exercice 04.2 
 !!! example "Exercice 04.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/04_2/enonce.md"
@@ -146,7 +146,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-05.pdf){. target = "_blank"} en pdf.
 
-### Exercice 05.1 □
+### Exercice 05.1 
 !!! example "Exercice 05.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/05_1/enonce.md"
@@ -158,7 +158,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/05_1/enonce.md"
 
 
-### Exercice 05.2 □
+### Exercice 05.2 
 !!! example "Exercice 05.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/05_2/enonce.md"
@@ -175,7 +175,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-06.pdf){. target = "_blank"} en pdf.
 
-### Exercice 06.1 □
+### Exercice 06.1 
 !!! example "Exercice 06.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/06_1/enonce.md"
@@ -187,7 +187,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/06_1/enonce.md"
 
 
-### Exercice 06.2 □
+### Exercice 06.2 
 !!! example "Exercice 06.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/06_2/enonce.md"
@@ -204,7 +204,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-07.pdf){. target = "_blank"} en pdf.
 
-### Exercice 07.1 □
+### Exercice 07.1 
 !!! example "Exercice 07.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/07_1/enonce.md"
@@ -216,7 +216,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/07_1/enonce.md"
 
 
-### Exercice 07.2 □
+### Exercice 07.2 
 !!! example "Exercice 07.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/07_2/enonce.md"
@@ -233,7 +233,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-08.pdf){. target = "_blank"} en pdf.
 
-### Exercice 08.1 □
+### Exercice 08.1 
 !!! example "Exercice 08.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/08_1/enonce.md"
@@ -245,7 +245,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/08_1/enonce.md"
 
 
-### Exercice 08.2 □
+### Exercice 08.2 
 !!! example "Exercice 08.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/08_2/enonce.md"
@@ -262,7 +262,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-09.pdf){. target = "_blank"} en pdf.
 
-### Exercice 09.1 □
+### Exercice 09.1 
 !!! example "Exercice 09.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/09_1/enonce.md"
@@ -274,7 +274,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/09_1/enonce.md"
 
 
-### Exercice 09.2 □
+### Exercice 09.2 
 !!! example "Exercice 09.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/09_2/enonce.md"
@@ -291,7 +291,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-10.pdf){. target = "_blank"} en pdf.
 
-### Exercice 10.1 □
+### Exercice 10.1 
 !!! example "Exercice 10.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/10_1/enonce.md"
@@ -303,7 +303,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/10_1/enonce.md"
 
 
-### Exercice 10.2 □
+### Exercice 10.2 
 !!! example "Exercice 10.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/10_2/enonce.md"
@@ -320,7 +320,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-11.pdf){. target = "_blank"} en pdf.
 
-### Exercice 11.1 □
+### Exercice 11.1 
 !!! example "Exercice 11.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/11_1/enonce.md"
@@ -332,7 +332,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/11_1/enonce.md"
 
 
-### Exercice 11.2 □
+### Exercice 11.2 
 !!! example "Exercice 11.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/11_2/enonce.md"
@@ -349,7 +349,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-12.pdf){. target = "_blank"} en pdf.
 
-### Exercice 12.1 □
+### Exercice 12.1 
 !!! example "Exercice 12.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/12_1/enonce.md"
@@ -361,7 +361,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/12_1/enonce.md"
 
 
-### Exercice 12.2 □
+### Exercice 12.2 
 !!! example "Exercice 12.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/12_2/enonce.md"
@@ -378,7 +378,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-13.pdf){. target = "_blank"} en pdf.
 
-### Exercice 13.1 □
+### Exercice 13.1 
 !!! example "Exercice 13.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/13_1/enonce.md"
@@ -390,7 +390,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/13_1/enonce.md"
 
 
-### Exercice 13.2 □
+### Exercice 13.2 
 !!! example "Exercice 13.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/13_2/enonce.md"
@@ -407,7 +407,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-14.pdf){. target = "_blank"} en pdf.
 
-### Exercice 14.1 □
+### Exercice 14.1 
 !!! example "Exercice 14.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/14_1/enonce.md"
@@ -419,7 +419,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/14_1/enonce.md"
 
 
-### Exercice 14.2 □
+### Exercice 14.2 
 !!! example "Exercice 14.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/14_2/enonce.md"
@@ -436,7 +436,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-15.pdf){. target = "_blank"} en pdf.
 
-### Exercice 15.1 □
+### Exercice 15.1 
 !!! example "Exercice 15.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/15_1/enonce.md"
@@ -448,7 +448,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/15_1/enonce.md"
 
 
-### Exercice 15.2 □
+### Exercice 15.2 
 !!! example "Exercice 15.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/15_2/enonce.md"
@@ -465,7 +465,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-16.pdf){. target = "_blank"} en pdf.
 
-### Exercice 16.1 □
+### Exercice 16.1 
 !!! example "Exercice 16.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/16_1/enonce.md"
@@ -477,7 +477,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/16_1/enonce.md"
 
 
-### Exercice 16.2 □
+### Exercice 16.2 
 !!! example "Exercice 16.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/16_2/enonce.md"
@@ -494,7 +494,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-17.pdf){. target = "_blank"} en pdf.
 
-### Exercice 17.1 □
+### Exercice 17.1 
 !!! example "Exercice 17.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/17_1/enonce.md"
@@ -506,7 +506,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/17_1/enonce.md"
 
 
-### Exercice 17.2 □
+### Exercice 17.2 
 !!! example "Exercice 17.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/17_2/enonce.md"
@@ -523,7 +523,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-18.pdf){. target = "_blank"} en pdf.
 
-### Exercice 18.1 □
+### Exercice 18.1 
 !!! example "Exercice 18.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/18_1/enonce.md"
@@ -535,7 +535,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/18_1/enonce.md"
 
 
-### Exercice 18.2 □
+### Exercice 18.2 
 !!! example "Exercice 18.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/18_2/enonce.md"
@@ -552,7 +552,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-19.pdf){. target = "_blank"} en pdf.
 
-### Exercice 19.1 □
+### Exercice 19.1 
 !!! example "Exercice 19.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/19_1/enonce.md"
@@ -564,7 +564,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/19_1/enonce.md"
 
 
-### Exercice 19.2 □
+### Exercice 19.2 
 !!! example "Exercice 19.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/19_2/enonce.md"
@@ -581,7 +581,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-20.pdf){. target = "_blank"} en pdf.
 
-### Exercice 20.1 □
+### Exercice 20.1 
 !!! example "Exercice 20.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/20_1/enonce.md"
@@ -593,7 +593,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/20_1/enonce.md"
 
 
-### Exercice 20.2 □
+### Exercice 20.2 
 !!! example "Exercice 20.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/20_2/enonce.md"
@@ -610,7 +610,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-21.pdf){. target = "_blank"} en pdf.
 
-### Exercice 21.1 □
+### Exercice 21.1 
 !!! example "Exercice 21.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/21_1/enonce.md"
@@ -622,7 +622,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/21_1/enonce.md"
 
 
-### Exercice 21.2 □
+### Exercice 21.2 
 !!! example "Exercice 21.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/21_2/enonce.md"
@@ -639,7 +639,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-22.pdf){. target = "_blank"} en pdf.
 
-### Exercice 22.1 □
+### Exercice 22.1 
 !!! example "Exercice 22.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/22_1/enonce.md"
@@ -651,7 +651,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/22_1/enonce.md"
 
 
-### Exercice 22.2 □
+### Exercice 22.2 
 !!! example "Exercice 22.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/22_2/enonce.md"
@@ -668,7 +668,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-23.pdf){. target = "_blank"} en pdf.
 
-### Exercice 23.1 □
+### Exercice 23.1 
 !!! example "Exercice 23.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/23_1/enonce.md"
@@ -680,7 +680,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/23_1/enonce.md"
 
 
-### Exercice 23.2 □
+### Exercice 23.2 
 !!! example "Exercice 23.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/23_2/enonce.md"
@@ -697,7 +697,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-24.pdf){. target = "_blank"} en pdf.
 
-### Exercice 24.1 □
+### Exercice 24.1 
 !!! example "Exercice 24.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/24_1/enonce.md"
@@ -709,7 +709,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/24_1/enonce.md"
 
 
-### Exercice 24.2 □
+### Exercice 24.2 
 !!! example "Exercice 24.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/24_2/enonce.md"
@@ -726,7 +726,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-25.pdf){. target = "_blank"} en pdf.
 
-### Exercice 25.1 □
+### Exercice 25.1 
 !!! example "Exercice 25.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/25_1/enonce.md"
@@ -738,7 +738,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/25_1/enonce.md"
 
 
-### Exercice 25.2 □
+### Exercice 25.2 
 !!! example "Exercice 25.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/25_2/enonce.md"
@@ -755,7 +755,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-26.pdf){. target = "_blank"} en pdf.
 
-### Exercice 26.1 □
+### Exercice 26.1 
 !!! example "Exercice 26.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/26_1/enonce.md"
@@ -767,7 +767,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/26_1/enonce.md"
 
 
-### Exercice 26.2 □
+### Exercice 26.2 
 !!! example "Exercice 26.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/26_2/enonce.md"
@@ -784,7 +784,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-27.pdf){. target = "_blank"} en pdf.
 
-### Exercice 27.1 □
+### Exercice 27.1 
 !!! example "Exercice 27.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/27_1/enonce.md"
@@ -796,7 +796,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/27_1/enonce.md"
 
 
-### Exercice 27.2 □
+### Exercice 27.2 
 !!! example "Exercice 27.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/27_2/enonce.md"
@@ -813,7 +813,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-28.pdf){. target = "_blank"} en pdf.
 
-### Exercice 28.1 □
+### Exercice 28.1 
 !!! example "Exercice 28.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/28_1/enonce.md"
@@ -825,7 +825,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/28_1/enonce.md"
 
 
-### Exercice 28.2 □
+### Exercice 28.2 
 !!! example "Exercice 28.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/28_2/enonce.md"
@@ -842,7 +842,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-29.pdf){. target = "_blank"} en pdf.
 
-### Exercice 29.1 □
+### Exercice 29.1 
 !!! example "Exercice 29.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/29_1/enonce.md"
@@ -854,7 +854,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/29_1/enonce.md"
 
 
-### Exercice 29.2 □
+### Exercice 29.2 
 !!! example "Exercice 29.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/29_2/enonce.md"
@@ -871,7 +871,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-30.pdf){. target = "_blank"} en pdf.
 
-### Exercice 30.1 □
+### Exercice 30.1 
 !!! example "Exercice 30.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/30_1/enonce.md"
@@ -883,7 +883,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/30_1/enonce.md"
 
 
-### Exercice 30.2 □
+### Exercice 30.2 
 !!! example "Exercice 30.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/30_2/enonce.md"
@@ -900,7 +900,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-31.pdf){. target = "_blank"} en pdf.
 
-### Exercice 31.1 □
+### Exercice 31.1 
 !!! example "Exercice 31.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/31_1/enonce.md"
@@ -912,7 +912,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/31_1/enonce.md"
 
 
-### Exercice 31.2 □
+### Exercice 31.2 
 !!! example "Exercice 31.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/31_2/enonce.md"
@@ -929,7 +929,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-32.pdf){. target = "_blank"} en pdf.
 
-### Exercice 32.1 □
+### Exercice 32.1 
 !!! example "Exercice 32.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/32_1/enonce.md"
@@ -941,7 +941,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/32_1/enonce.md"
 
 
-### Exercice 32.2 □
+### Exercice 32.2 
 !!! example "Exercice 32.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/32_2/enonce.md"
@@ -958,7 +958,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-33.pdf){. target = "_blank"} en pdf.
 
-### Exercice 33.1 □
+### Exercice 33.1 
 !!! example "Exercice 33.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/33_1/enonce.md"
@@ -970,7 +970,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/33_1/enonce.md"
 
 
-### Exercice 33.2 □
+### Exercice 33.2 
 !!! example "Exercice 33.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/33_2/enonce.md"
@@ -987,7 +987,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-34.pdf){. target = "_blank"} en pdf.
 
-### Exercice 34.1 □
+### Exercice 34.1 
 !!! example "Exercice 34.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/34_1/enonce.md"
@@ -999,7 +999,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/34_1/enonce.md"
 
 
-### Exercice 34.2 □
+### Exercice 34.2 
 !!! example "Exercice 34.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/34_2/enonce.md"
@@ -1016,7 +1016,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-35.pdf){. target = "_blank"} en pdf.
 
-### Exercice 35.1 □
+### Exercice 35.1 
 !!! example "Exercice 35.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/35_1/enonce.md"
@@ -1028,7 +1028,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/35_1/enonce.md"
 
 
-### Exercice 35.2 □
+### Exercice 35.2 
 !!! example "Exercice 35.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/35_2/enonce.md"
@@ -1045,7 +1045,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-36.pdf){. target = "_blank"} en pdf.
 
-### Exercice 36.1 □
+### Exercice 36.1 
 !!! example "Exercice 36.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/36_1/enonce.md"
@@ -1057,7 +1057,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/36_1/enonce.md"
 
 
-### Exercice 36.2 □
+### Exercice 36.2 
 !!! example "Exercice 36.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/36_2/enonce.md"
@@ -1074,7 +1074,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-37.pdf){. target = "_blank"} en pdf.
 
-### Exercice 37.1 □
+### Exercice 37.1 
 !!! example "Exercice 37.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/37_1/enonce.md"
@@ -1086,7 +1086,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/37_1/enonce.md"
 
 
-### Exercice 37.2 □
+### Exercice 37.2 
 !!! example "Exercice 37.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/37_2/enonce.md"
@@ -1103,7 +1103,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-38.pdf){. target = "_blank"} en pdf.
 
-### Exercice 38.1 □
+### Exercice 38.1 
 !!! example "Exercice 38.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/38_1/enonce.md"
@@ -1115,7 +1115,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/38_1/enonce.md"
 
 
-### Exercice 38.2 □
+### Exercice 38.2 
 !!! example "Exercice 38.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/38_2/enonce.md"
@@ -1132,7 +1132,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-39.pdf){. target = "_blank"} en pdf.
 
-### Exercice 39.1 □
+### Exercice 39.1 
 !!! example "Exercice 39.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/39_1/enonce.md"
@@ -1144,7 +1144,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/39_1/enonce.md"
 
 
-### Exercice 39.2 □
+### Exercice 39.2 
 !!! example "Exercice 39.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/39_2/enonce.md"
@@ -1161,7 +1161,7 @@ WORK IN PROGRESS
 
 [Version originale du sujet](pdf2023/23-NSI-40.pdf){. target = "_blank"} en pdf.
 
-### Exercice 40.1 □
+### Exercice 40.1 
 !!! example "Exercice 40.1"
     === "Énoncé" 
         --8<-- "includes/2023/files/40_1/enonce.md"
@@ -1173,7 +1173,7 @@ WORK IN PROGRESS
             --8<-- "includes/2023/files/40_1/enonce.md"
 
 
-### Exercice 40.2 □
+### Exercice 40.2 
 !!! example "Exercice 40.2"
     === "Énoncé" 
         --8<-- "includes/2023/files/40_2/enonce.md"
