--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -2,7 +2,7 @@
 
 :new: :new: :new: :new: 
 
-----------
+----
 <!--
 
 :warning: **À lire**
@@ -1186,6 +1186,147 @@
         --8<-- "includes/2023/files/40_2/enonce.md"
         ```             
 
+## ▶ Sujet 41
 
-*Remerciements pour le signalement et la correction des nombreuses erreurs : Alexandre Hainaut, Noé Pierre, Cyrille Jochault, Sébastien Rivillon, Clémentine et Laorine (AEFE Montréal), Théo EwzZer, Laurent Briend, Matteo Gaillard, Pierre Mouries.*
+[Version originale du sujet](pdf2023/23-NSI-41.pdf){. target = "_blank"} en pdf.
 
+### Exercice 41.1 
+!!! example "Exercice 41.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/41_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/41_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/41_1/enonce.md"
+
+
+### Exercice 41.2 
+!!! example "Exercice 41.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/41_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/41_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/41_2/enonce.md"
+        ```             
+        
+## ▶ Sujet 42
+
+[Version originale du sujet](pdf2023/23-NSI-42.pdf){. target = "_blank"} en pdf.
+
+### Exercice 42.1 
+!!! example "Exercice 42.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/42_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/42_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/42_1/enonce.md"
+
+
+### Exercice 42.2 
+!!! example "Exercice 42.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/42_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/42_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/42_2/enonce.md"
+        ```             
+        
+## ▶ Sujet 43
+
+[Version originale du sujet](pdf2023/23-NSI-43.pdf){. target = "_blank"} en pdf.
+
+### Exercice 43.1 
+!!! example "Exercice 43.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/43_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/43_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/43_1/enonce.md"
+
+
+### Exercice 43.2 
+!!! example "Exercice 43.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/43_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/43_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/43_2/enonce.md"
+        ```             
+        
+## ▶ Sujet 44
+
+[Version originale du sujet](pdf2023/23-NSI-44.pdf){. target = "_blank"} en pdf.
+
+### Exercice 44.1 
+!!! example "Exercice 44.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/44_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/44_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/44_1/enonce.md"
+
+
+### Exercice 44.2 
+!!! example "Exercice 44.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/44_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/44_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/44_2/enonce.md"
+        ```             
+        
+## ▶ Sujet 45
+
+[Version originale du sujet](pdf2023/23-NSI-45.pdf){. target = "_blank"} en pdf.
+
+### Exercice 45.1 
+!!! example "Exercice 45.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/45_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/45_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/45_1/enonce.md"
+
+
+### Exercice 45.2 
+!!! example "Exercice 45.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/45_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/45_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/45_2/enonce.md"
+        ```             
