--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -1,28 +1,15 @@
 # Épreuve Pratique BNS 2023
 
-:new: :new: :new: :new: 
-
-----
-<!--
-
-:warning: **À lire**
-
-- Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2023**. 
-- Certains sujets (ceux de l'année dernière reconduits cette année) ont parfois été légèrement modifiés par rapport à la version 2021. La correspondance des numérotations entre la BNS 2021 et la BNS 2022 peut se retrouver [ici](data/corresp.png){. target = "_blank"}
-- Certains de ces sujets comportent des erreurs, que j'ai corrigées ou non. Dans le doute, comparer avec la version originale du sujet.
-- Les versions originales de ces sujets sont disponibles en pdf au début de chaque sujet. (pour télécharger les 40 sujets en un seul fichier, c'est [ici](data/BNS_2022_total_V2.pdf){. target = "_blank"})
-- Si vous trouvez une erreur dans un énoncé ou une correction, merci m'envoyer un message à gilles.lassus[at]ac-bordeaux.fr.
 
 
-!!! info ":star: Pourquoi proposer une correction ? :star:" 
+Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2023**. 
+Merci de me signaler les erreurs éventuelles à l'adresse `gilles.lassus@ac-bordeaux.fr`
+
+
+<!-- !!! info ":star: Pourquoi proposer une correction ? :star:" 
     - La BNS est une banque de sujets **publique**, publiée bien en amont de l'Épreuve Pratique, afin que les futurs candidats puissent s'entraîner à la résolution des exercices.
     - Pour que **mes** élèves puissent travailler en autonomie, une proposition de corrigé figure en regard de l'énoncé.
     - Pour que d'autres puissent aussi travailler ces sujets et ces corrigés, éventuellement me signaler des erreurs, les corriger, et les partager à leur tour, ces corrections sont accessibles **à tous**.  -->
-
-
-:warning: :warning: :warning: WORK IN PROGRESS :warning: :warning: :warning: 
-
-**SUJETS EN COURS DE MISE EN LIGNE**
 
 
 
