--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -2,8 +2,13 @@
 
 
 
-Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2023**. 
+Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2023**.  
 Merci de me signaler les erreurs éventuelles à l'adresse `gilles.lassus@ac-bordeaux.fr`
+
+:arrow_down: **Téléchargements**
+
+- Une archive contenant les 45 dossiers (contenant chacun les deux fichiers ```.pdf``` et ```.py```) : [BNS_2023.zip](data2023/BNS_2023.zip){. target="_blank"} (2,9 Mo)
+- Un pdf unique de tous les sujets : [BNS_2023_pdf_unique.pdf](data2023/BNS_2023_pdf_unique.pdf){. target="_blank"} (3,2 Mo)
 
 
 <!-- !!! info ":star: Pourquoi proposer une correction ? :star:" 
