--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -3,7 +3,8 @@
 
 
 Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2023**.  
-Merci de me signaler les erreurs éventuelles à l'adresse `gilles.lassus@ac-bordeaux.fr`
+Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`  
+*(merci à Rémi Vanicat, Pierre Mouriès, Cyrille Jochault)*
 
 :arrow_down: **Téléchargements**
 
@@ -1322,3 +1323,5 @@ Merci de me signaler les erreurs éventuelles à l'adresse `gilles.lassus@ac-bor
         ```md
         --8<-- "includes/2023/files/45_2/enonce.md"
         ```             
+
+
