--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -14,6 +14,9 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
 
 
 
+
+
+
 ## ▶ Sujet 01
 
 [Version originale du sujet](pdf2023/23-NSI-01.pdf){. target="_blank"} en pdf.
@@ -1333,4 +1336,169 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
         ```             
           
     :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-40.py){. target="_blank"}
+    
+## ▶ Sujet 41
+
+[Version originale du sujet](pdf2023/23-NSI-41.pdf){. target="_blank"} en pdf.
+
+### Exercice 41.1
+!!! example "Exercice 41.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/41_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/41_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/41_1/enonce.md"
+    
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+
+
+### Exercice 41.2
+!!! example "Exercice 41.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/41_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/41_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/41_2/enonce.md"
+        ```             
+          
+    :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-41.py){. target="_blank"}
+    
+## ▶ Sujet 42
+
+[Version originale du sujet](pdf2023/23-NSI-42.pdf){. target="_blank"} en pdf.
+
+### Exercice 42.1
+!!! example "Exercice 42.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/42_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/42_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/42_1/enonce.md"
+    
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+
+
+### Exercice 42.2
+!!! example "Exercice 42.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/42_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/42_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/42_2/enonce.md"
+        ```             
+          
+    :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-42.py){. target="_blank"}
+    
+## ▶ Sujet 43
+
+[Version originale du sujet](pdf2023/23-NSI-43.pdf){. target="_blank"} en pdf.
+
+### Exercice 43.1
+!!! example "Exercice 43.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/43_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/43_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/43_1/enonce.md"
+    
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+
+
+### Exercice 43.2
+!!! example "Exercice 43.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/43_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/43_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/43_2/enonce.md"
+        ```             
+          
+    :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-43.py){. target="_blank"}
+    
+## ▶ Sujet 44
+
+[Version originale du sujet](pdf2023/23-NSI-44.pdf){. target="_blank"} en pdf.
+
+### Exercice 44.1
+!!! example "Exercice 44.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/44_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/44_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/44_1/enonce.md"
+    
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+
+
+### Exercice 44.2
+!!! example "Exercice 44.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/44_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/44_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/44_2/enonce.md"
+        ```             
+          
+    :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-44.py){. target="_blank"}
+    
+## ▶ Sujet 45
+
+[Version originale du sujet](pdf2023/23-NSI-45.pdf){. target="_blank"} en pdf.
+
+### Exercice 45.1
+!!! example "Exercice 45.1"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/45_1/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/45_1/correction.md"
+
+    === "Source Markdown"
+            --8<-- "includes/2023/files/45_1/enonce.md"
+    
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+
+
+### Exercice 45.2
+!!! example "Exercice 45.2"
+    === "Énoncé" 
+        --8<-- "includes/2023/files/45_2/enonce.md"
+
+    === "Correction"
+        --8<-- "includes/2023/files/45_2/correction.md"
+
+    === "Sources Markdown"
+        ```md
+        --8<-- "includes/2023/files/45_2/enonce.md"
+        ```             
+          
+    :arrow_right: [Complétez le code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/23-NSI-45.py){. target="_blank"}
     
