--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -32,7 +32,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/01_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
 
 
 ### Exercice 01.2
